domibusConnectorBuilder/domibusConnectorBuilderStandalone/src/main/k8s/dpl-template-connector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-${lab.id}-connector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${lab.id}-connector
  template:
    metadata:
      labels:
        app: ${lab.id}-connector
        pod.cp.cna.at/ingress: allow
    spec:
      volumes:
        - name: ecx-keystores
          configMap:
            name: ecx-keystores
            defaultMode: 420
        - name: temp
          emptyDir: {}
        - name: storage
          persistentVolumeClaim:
            claimName: ${lab.id}-connector-pvc
      containers:
        - name: ${lab.id}-connector
          image: centralrepo.apps.a3.cp.cna.at/brz-ju-images-poc-docker/jueu/dc-connector:${project.version}_${git.commit.id.abbrev}
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 1024Mi
            requests:
              cpu: 50m
              memory: 512Mi
          volumeMounts:
            - name: storage
              mountPath: /app/data
              subPath: ${lab.id}/connector
            # - name: ecx-keystores
            #   mountPath: /app/config/keystores
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
---
kind: Service
apiVersion: v1
metadata:
  name: ${lab.id}-connector-svc
  labels:
    app: ${lab.id}-connector
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: ${lab.id}-connector-service-port
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  selector:
    app: ${lab.id}-connector
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ${lab.id}-connector-route
  labels:
    app: ${lab.id}-connector
spec:
  host: ${lab.id}-connector-ju-eu-ejustice-eqs.apps.a2.cp.cna.at
  path: /
  to:
    kind: Service
    name: ${lab.id}-connector-svc
    weight: 100
  port:
    targetPort: ${lab.id}-connector-service-port
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
